exercicios 01 javascript solo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <link rel="stylesheet" href="style.css">
 
-<script src="aula01.js"></script>
+<script src="exercicios.js"></script>
 
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Bem vindo ao meu mundo</p>
+    <h1>Exercicios</h1>
+    <p>Aprendendo a fazer login </p>
 </body>
 </html>
