--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="style.css">
 
-<script src="exercicios.js"></script>
+<script src="exercicios02.js"></script>
 
 </head>
 <body>
