iniciado os exercicios inicias sobre os laços for

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <link rel="stylesheet" href="style.css">
 
-<script src="exercicios08.js"></script>
+<!-- <script src="exercicios08.js"></script> -->
+<!-- <script src="estrutura de repetiçao/for.js"></script> -->
+ <script src="estrutura de repetiçao/exercicio02.js"></script>p
 
 </head>
 <body>
