exercicios de js

--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 
 <!-- <script src="exercicios08.js"></script> -->
 <!-- <script src="estrutura de repetiçao/for.js"></script> -->
- <script src="estrutura de repetiçao/exercicio02.js"></script>p
+ <!-- <script src="estrutura de repetiçao/exercicio02.js"></script>p -->
+  <script src="./dom/dom.js" defer></script>
 
 </head>
 <body>
     <h1>Exercicios</h1>
-    <p>Aprendendo a fazer login </p>
+    <!-- id é um indentificador unico  -->
+    <p id="titulo">os drake de sp</p>
+
+    <ul>
+        <li id="criador">drakezinho</li>
+        <li class="Youtuber">ogb59d</li>
+        <li class="Youtuber">odrake59d</li>
+        <li class="Youtuber">brunoxp</li>
+        <li class="Youtuber">ogomes59d</li>
+        <li class="Youtuber">lk do techo</li>
+        <li class="Youtuber">dapita</li>
+    </ul>
 </body>
 </html>
